--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
     
-    <title>Мои Молитвы</title>
+    <!-- ✅ --- ПОДКЛЮЧАЕМ ШРИФТЫ --- ✅ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Kurale&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Pacifico&family=Yeseva+One&display=swap" rel="stylesheet">
+    
+    <title>Мае Молітвы</title>
   </head>
   <body>
     <div id="app"></div>
