--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- ✅ META-ТЕГИ ДЛЯ PWA -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <!-- ================================================================== -->
+    <!-- ✅ ОБНОВЛЕННЫЙ БЛОК ДЛЯ PWA И УСТАНОВКИ НА iOS + ANDROID          -->
+    <!-- ================================================================== -->
+
+    <!-- 1. Манифест для Android и стандартных браузеров -->
+    <link rel="manifest" href="/manifest.webmanifest">
+
+    <!-- 2. Основной цвет темы (влияет на цвет UI браузера) -->
     <meta name="theme-color" content="#1867C0">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
-    
-    <!-- ✅ --- ПОДКЛЮЧАЕМ ШРИФТЫ --- ✅ -->
+
+    <!-- 3. Ключевой тег для iOS: иконка на домашнем экране -->
+    <!-- Убедитесь, что файл 'apple-touch-icon.png' лежит в папке /public -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- 4. Мета-теги для полноэкранного режима на iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Малітвы">
+
+    <!-- 5. Подключение шрифтов (без изменений) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Kurale&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Pacifico&family=Yeseva+One&display=swap" rel="stylesheet">
